<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_insert_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:fontFamily="@font/readex_pro"
        android:text="@string/title_enterNoticeCode"
        android:textColor="@color/black"
        android:textSize="@dimen/h3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_insert_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/extra_small"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/paragraph_noticeCode"
        android:textColor="@color/black"
        android:textSize="@dimen/body" />

    <it.pagopa.swc_smartpos.ui_kit.input.InputText
        android:id="@+id/inputText_insert_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_horizontal"
        app:chunk="4"
        app:do_check="true"
        app:inputTypeInputText="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/header_margin_top"
        android:enabled="false"
        android:text="@string/cta_confirm" />
</androidx.appcompat.widget.LinearLayoutCompat>